<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 

        <TextView
            android:id="@+id/txt_recipients_display"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".80"
            android:text="@string/recipients"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_add_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:text="@string/plus"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:onClick="onClickAddContact" />
 
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 

        <TextView
            android:id="@+id/txt_contacts"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_contacts" />
 
    </LinearLayout>
    
    
    
    
    
    
    
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty" />
    
    
    
    
    
    
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 

        <TextView
            android:id="@+id/txt_msg_display"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".80"
            android:text="@string/message"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:text="@string/arrow"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:onClick="onClickSendMessage" />
 
    </LinearLayout>
    
    
    
    
    
   
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 

        <EditText
            android:id="@+id/txt_message"
            android:inputType="textMultiLine"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty" />
 
    </LinearLayout>
    

</LinearLayout>